// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxAggregation render initial state with all props set 1`] = `
<DocumentFragment>
  <div
    class="w-100 br1"
  >
    <div
      class="ant-row ant-row-space-between"
      type="flex"
    >
      <div
        class="ant-col"
        style="flex-basis: auto;"
      >
        <h3
          class="pb1 fw4"
        >
          Test
        </h3>
      </div>
      <div
        class="ant-col"
      />
    </div>
    <div
      class="ant-row w-100"
    >
      <div
        class="ant-col"
        style="flex-basis: auto;"
      >
        <div
          class="ant-row ant-row-space-between mb2"
          type="flex"
        >
          <div
            class="ant-col"
          >
            <label
              class="ant-checkbox-wrapper"
            >
              <span
                class="ant-checkbox"
              >
                <input
                  class="ant-checkbox-input"
                  type="checkbox"
                  value=""
                />
                <span
                  class="ant-checkbox-inner"
                />
              </span>
              <span>
                <span
                  data-test-id="checkbox-aggregation-option-bucket1"
                >
                  bucket1
                </span>
              </span>
            </label>
          </div>
          <div
            class="ant-col"
          >
            <span
              class="ant-tag __UnclickableTag__"
            >
              1,000,000
            </span>
          </div>
        </div>
        <div
          class="ant-row ant-row-space-between mb2"
          type="flex"
        >
          <div
            class="ant-col"
          >
            <label
              class="ant-checkbox-wrapper"
            >
              <span
                class="ant-checkbox"
              >
                <input
                  class="ant-checkbox-input"
                  type="checkbox"
                  value=""
                />
                <span
                  class="ant-checkbox-inner"
                />
              </span>
              <span>
                <span
                  data-test-id="checkbox-aggregation-option-bucket2"
                >
                  bucket2
                </span>
              </span>
            </label>
          </div>
          <div
            class="ant-col"
          >
            <span
              class="ant-tag __UnclickableTag__"
            >
              2
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CheckboxAggregation render initial state with bucketHelp 1`] = `
<DocumentFragment>
  <div
    class="w-100 br1"
  >
    <div
      class="ant-row ant-row-space-between"
      type="flex"
    >
      <div
        class="ant-col"
        style="flex-basis: auto;"
      >
        <h3
          class="pb1 fw4"
        >
          Test
        </h3>
      </div>
      <div
        class="ant-col"
      />
    </div>
    <div
      class="ant-row w-100"
    >
      <div
        class="ant-col"
        style="flex-basis: auto;"
      >
        <div
          class="ant-row ant-row-space-between mb2"
          type="flex"
        >
          <div
            class="ant-col"
          >
            <label
              class="ant-checkbox-wrapper"
            >
              <span
                class="ant-checkbox"
              >
                <input
                  class="ant-checkbox-input"
                  type="checkbox"
                  value=""
                />
                <span
                  class="ant-checkbox-inner"
                />
              </span>
              <span>
                <span
                  data-test-id="checkbox-aggregation-option-bucket1"
                >
                  bucket1 
                  <span
                    aria-label="question-circle"
                    class="anticon anticon-question-circle"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="question-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                      />
                      <path
                        d="M623.6 316.7C593.6 290.4 554 276 512 276s-81.6 14.5-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56.1 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.1 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0130.9-44.8c59-22.7 97.1-74.7 97.1-132.5.1-39.3-17.1-76-48.3-103.3zM472 732a40 40 0 1080 0 40 40 0 10-80 0z"
                      />
                    </svg>
                  </span>
                </span>
              </span>
            </label>
          </div>
          <div
            class="ant-col"
          >
            <span
              class="ant-tag __UnclickableTag__"
            >
              1
            </span>
          </div>
        </div>
        <div
          class="ant-row ant-row-space-between mb2"
          type="flex"
        >
          <div
            class="ant-col"
          >
            <label
              class="ant-checkbox-wrapper"
            >
              <span
                class="ant-checkbox"
              >
                <input
                  class="ant-checkbox-input"
                  type="checkbox"
                  value=""
                />
                <span
                  class="ant-checkbox-inner"
                />
              </span>
              <span>
                <span
                  data-test-id="checkbox-aggregation-option-bucket2"
                >
                  bucket2 
                  <span
                    aria-label="question-circle"
                    class="anticon anticon-question-circle"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="question-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                      />
                      <path
                        d="M623.6 316.7C593.6 290.4 554 276 512 276s-81.6 14.5-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56.1 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.1 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0130.9-44.8c59-22.7 97.1-74.7 97.1-132.5.1-39.3-17.1-76-48.3-103.3zM472 732a40 40 0 1080 0 40 40 0 10-80 0z"
                      />
                    </svg>
                  </span>
                </span>
              </span>
            </label>
          </div>
          <div
            class="ant-col"
          >
            <span
              class="ant-tag __UnclickableTag__"
            >
              2
            </span>
          </div>
        </div>
        <div
          class="ant-row ant-row-space-between mb2"
          type="flex"
        >
          <div
            class="ant-col"
          >
            <label
              class="ant-checkbox-wrapper"
            >
              <span
                class="ant-checkbox"
              >
                <input
                  class="ant-checkbox-input"
                  type="checkbox"
                  value=""
                />
                <span
                  class="ant-checkbox-inner"
                />
              </span>
              <span>
                <span
                  data-test-id="checkbox-aggregation-option-bucket3"
                >
                  bucket3 
                  <span
                    aria-label="question-circle"
                    class="anticon anticon-question-circle"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="question-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                      />
                      <path
                        d="M623.6 316.7C593.6 290.4 554 276 512 276s-81.6 14.5-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56.1 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.1 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0130.9-44.8c59-22.7 97.1-74.7 97.1-132.5.1-39.3-17.1-76-48.3-103.3zM472 732a40 40 0 1080 0 40 40 0 10-80 0z"
                      />
                    </svg>
                  </span>
                </span>
              </span>
            </label>
          </div>
          <div
            class="ant-col"
          >
            <span
              class="ant-tag __UnclickableTag__"
            >
              3
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CheckboxAggregation render initial state without splitDisplayName 1`] = `
<DocumentFragment>
  <div
    class="w-100 br1"
  >
    <div
      class="ant-row ant-row-space-between"
      type="flex"
    >
      <div
        class="ant-col"
        style="flex-basis: auto;"
      >
        <h3
          class="pb1 fw4"
        >
          Test
        </h3>
      </div>
      <div
        class="ant-col"
      />
    </div>
    <div
      class="ant-row w-100"
    >
      <div
        class="ant-col"
        style="flex-basis: auto;"
      >
        <div
          class="ant-row ant-row-space-between mb2"
          type="flex"
        >
          <div
            class="ant-col"
          >
            <label
              class="ant-checkbox-wrapper ant-checkbox-wrapper-checked"
            >
              <span
                class="ant-checkbox ant-checkbox-checked"
              >
                <input
                  checked=""
                  class="ant-checkbox-input"
                  type="checkbox"
                  value=""
                />
                <span
                  class="ant-checkbox-inner"
                />
              </span>
              <span>
                <span
                  data-test-id="checkbox-aggregation-option-bucket1"
                >
                  bucket1
                </span>
              </span>
            </label>
          </div>
          <div
            class="ant-col"
          >
            <span
              class="ant-tag __UnclickableTag__"
            >
              1
            </span>
          </div>
        </div>
        <div
          class="ant-row ant-row-space-between mb2"
          type="flex"
        >
          <div
            class="ant-col"
          >
            <label
              class="ant-checkbox-wrapper"
            >
              <span
                class="ant-checkbox"
              >
                <input
                  class="ant-checkbox-input"
                  type="checkbox"
                  value=""
                />
                <span
                  class="ant-checkbox-inner"
                />
              </span>
              <span>
                <span
                  data-test-id="checkbox-aggregation-option-bucket2"
                >
                  bucket2
                </span>
              </span>
            </label>
          </div>
          <div
            class="ant-col"
          >
            <span
              class="ant-tag __UnclickableTag__"
            >
              2
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CheckboxAggregation render more than 10 after show more clicked 1`] = `
<DocumentFragment>
  <div
    class="w-100 br1"
  >
    <div
      class="ant-row ant-row-space-between"
      type="flex"
    >
      <div
        class="ant-col"
        style="flex-basis: auto;"
      >
        <h3
          class="pb1 fw4"
        >
          Test
        </h3>
      </div>
      <div
        class="ant-col"
      />
    </div>
    <div
      class="ant-row w-100"
    >
      <div
        class="ant-col"
        style="flex-basis: auto;"
      >
        <div
          class="ant-row ant-row-space-between mb2"
          type="flex"
        >
          <div
            class="ant-col"
          >
            <label
              class="ant-checkbox-wrapper ant-checkbox-wrapper-checked"
            >
              <span
                class="ant-checkbox ant-checkbox-checked"
              >
                <input
                  checked=""
                  class="ant-checkbox-input"
                  type="checkbox"
                  value=""
                />
                <span
                  class="ant-checkbox-inner"
                />
              </span>
              <span>
                <span
                  data-test-id="checkbox-aggregation-option-bucket1"
                >
                  bucket1
                </span>
              </span>
            </label>
          </div>
          <div
            class="ant-col"
          >
            <span
              class="ant-tag __UnclickableTag__"
            >
              1
            </span>
          </div>
        </div>
        <div
          class="ant-row ant-row-space-between mb2"
          type="flex"
        >
          <div
            class="ant-col"
          >
            <label
              class="ant-checkbox-wrapper"
            >
              <span
                class="ant-checkbox"
              >
                <input
                  class="ant-checkbox-input"
                  type="checkbox"
                  value=""
                />
                <span
                  class="ant-checkbox-inner"
                />
              </span>
              <span>
                <span
                  data-test-id="checkbox-aggregation-option-bucket2"
                >
                  bucket2
                </span>
              </span>
            </label>
          </div>
          <div
            class="ant-col"
          >
            <span
              class="ant-tag __UnclickableTag__"
            >
              2
            </span>
          </div>
        </div>
        <div
          class="ant-row ant-row-space-between mb2"
          type="flex"
        >
          <div
            class="ant-col"
          >
            <label
              class="ant-checkbox-wrapper"
            >
              <span
                class="ant-checkbox"
              >
                <input
                  class="ant-checkbox-input"
                  type="checkbox"
                  value=""
                />
                <span
                  class="ant-checkbox-inner"
                />
              </span>
              <span>
                <span
                  data-test-id="checkbox-aggregation-option-bucket3"
                >
                  bucket3
                </span>
              </span>
            </label>
          </div>
          <div
            class="ant-col"
          >
            <span
              class="ant-tag __UnclickableTag__"
            >
              3
            </span>
          </div>
        </div>
        <div
          class="ant-row ant-row-space-between mb2"
          type="flex"
        >
          <div
            class="ant-col"
          >
            <label
              class="ant-checkbox-wrapper"
            >
              <span
                class="ant-checkbox"
              >
                <input
                  class="ant-checkbox-input"
                  type="checkbox"
                  value=""
                />
                <span
                  class="ant-checkbox-inner"
                />
              </span>
              <span>
                <span
                  data-test-id="checkbox-aggregation-option-bucket4"
                >
                  bucket4
                </span>
              </span>
            </label>
          </div>
          <div
            class="ant-col"
          >
            <span
              class="ant-tag __UnclickableTag__"
            >
              4
            </span>
          </div>
        </div>
        <div
          class="ant-row ant-row-space-between mb2"
          type="flex"
        >
          <div
            class="ant-col"
          >
            <label
              class="ant-checkbox-wrapper"
            >
              <span
                class="ant-checkbox"
              >
                <input
                  class="ant-checkbox-input"
                  type="checkbox"
                  value=""
                />
                <span
                  class="ant-checkbox-inner"
                />
              </span>
              <span>
                <span
                  data-test-id="checkbox-aggregation-option-bucket5"
                >
                  bucket5
                </span>
              </span>
            </label>
          </div>
          <div
            class="ant-col"
          >
            <span
              class="ant-tag __UnclickableTag__"
            >
              2
            </span>
          </div>
        </div>
        <div
          class="ant-row ant-row-space-between mb2"
          type="flex"
        >
          <div
            class="ant-col"
          >
            <label
              class="ant-checkbox-wrapper"
            >
              <span
                class="ant-checkbox"
              >
                <input
                  class="ant-checkbox-input"
                  type="checkbox"
                  value=""
                />
                <span
                  class="ant-checkbox-inner"
                />
              </span>
              <span>
                <span
                  data-test-id="checkbox-aggregation-option-bucket6"
                >
                  bucket6
                </span>
              </span>
            </label>
          </div>
          <div
            class="ant-col"
          >
            <span
              class="ant-tag __UnclickableTag__"
            >
              2
            </span>
          </div>
        </div>
        <div
          class="ant-row ant-row-space-between mb2"
          type="flex"
        >
          <div
            class="ant-col"
          >
            <label
              class="ant-checkbox-wrapper"
            >
              <span
                class="ant-checkbox"
              >
                <input
                  class="ant-checkbox-input"
                  type="checkbox"
                  value=""
                />
                <span
                  class="ant-checkbox-inner"
                />
              </span>
              <span>
                <span
                  data-test-id="checkbox-aggregation-option-bucket7"
                >
                  bucket7
                </span>
              </span>
            </label>
          </div>
          <div
            class="ant-col"
          >
            <span
              class="ant-tag __UnclickableTag__"
            >
              2
            </span>
          </div>
        </div>
        <div
          class="ant-row ant-row-space-between mb2"
          type="flex"
        >
          <div
            class="ant-col"
          >
            <label
              class="ant-checkbox-wrapper"
            >
              <span
                class="ant-checkbox"
              >
                <input
                  class="ant-checkbox-input"
                  type="checkbox"
                  value=""
                />
                <span
                  class="ant-checkbox-inner"
                />
              </span>
              <span>
                <span
                  data-test-id="checkbox-aggregation-option-bucket8"
                >
                  bucket8
                </span>
              </span>
            </label>
          </div>
          <div
            class="ant-col"
          >
            <span
              class="ant-tag __UnclickableTag__"
            >
              2
            </span>
          </div>
        </div>
        <div
          class="ant-row ant-row-space-between mb2"
          type="flex"
        >
          <div
            class="ant-col"
          >
            <label
              class="ant-checkbox-wrapper"
            >
              <span
                class="ant-checkbox"
              >
                <input
                  class="ant-checkbox-input"
                  type="checkbox"
                  value=""
                />
                <span
                  class="ant-checkbox-inner"
                />
              </span>
              <span>
                <span
                  data-test-id="checkbox-aggregation-option-bucket9"
                >
                  bucket9
                </span>
              </span>
            </label>
          </div>
          <div
            class="ant-col"
          >
            <span
              class="ant-tag __UnclickableTag__"
            >
              2
            </span>
          </div>
        </div>
        <div
          class="ant-row ant-row-space-between mb2"
          type="flex"
        >
          <div
            class="ant-col"
          >
            <label
              class="ant-checkbox-wrapper"
            >
              <span
                class="ant-checkbox"
              >
                <input
                  class="ant-checkbox-input"
                  type="checkbox"
                  value=""
                />
                <span
                  class="ant-checkbox-inner"
                />
              </span>
              <span>
                <span
                  data-test-id="checkbox-aggregation-option-bucket10"
                >
                  bucket10
                </span>
              </span>
            </label>
          </div>
          <div
            class="ant-col"
          >
            <span
              class="ant-tag __UnclickableTag__"
            >
              2
            </span>
          </div>
        </div>
        <button
          class="__SecondaryButton__"
          type="button"
        >
          Show 1 more
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CheckboxAggregation renders with show more button if buckets are more than 10 1`] = `
<DocumentFragment>
  <div
    class="w-100 br1"
  >
    <div
      class="ant-row ant-row-space-between"
      type="flex"
    >
      <div
        class="ant-col"
        style="flex-basis: auto;"
      >
        <h3
          class="pb1 fw4"
        >
          Test
        </h3>
      </div>
      <div
        class="ant-col"
      />
    </div>
    <div
      class="ant-row w-100"
    >
      <div
        class="ant-col"
        style="flex-basis: auto;"
      >
        <div
          class="ant-row ant-row-space-between mb2"
          type="flex"
        >
          <div
            class="ant-col"
          >
            <label
              class="ant-checkbox-wrapper ant-checkbox-wrapper-checked"
            >
              <span
                class="ant-checkbox ant-checkbox-checked"
              >
                <input
                  checked=""
                  class="ant-checkbox-input"
                  type="checkbox"
                  value=""
                />
                <span
                  class="ant-checkbox-inner"
                />
              </span>
              <span>
                <span
                  data-test-id="checkbox-aggregation-option-bucket1"
                >
                  bucket1
                </span>
              </span>
            </label>
          </div>
          <div
            class="ant-col"
          >
            <span
              class="ant-tag __UnclickableTag__"
            >
              1
            </span>
          </div>
        </div>
        <div
          class="ant-row ant-row-space-between mb2"
          type="flex"
        >
          <div
            class="ant-col"
          >
            <label
              class="ant-checkbox-wrapper"
            >
              <span
                class="ant-checkbox"
              >
                <input
                  class="ant-checkbox-input"
                  type="checkbox"
                  value=""
                />
                <span
                  class="ant-checkbox-inner"
                />
              </span>
              <span>
                <span
                  data-test-id="checkbox-aggregation-option-bucket2"
                >
                  bucket2
                </span>
              </span>
            </label>
          </div>
          <div
            class="ant-col"
          >
            <span
              class="ant-tag __UnclickableTag__"
            >
              2
            </span>
          </div>
        </div>
        <div
          class="ant-row ant-row-space-between mb2"
          type="flex"
        >
          <div
            class="ant-col"
          >
            <label
              class="ant-checkbox-wrapper"
            >
              <span
                class="ant-checkbox"
              >
                <input
                  class="ant-checkbox-input"
                  type="checkbox"
                  value=""
                />
                <span
                  class="ant-checkbox-inner"
                />
              </span>
              <span>
                <span
                  data-test-id="checkbox-aggregation-option-bucket3"
                >
                  bucket3
                </span>
              </span>
            </label>
          </div>
          <div
            class="ant-col"
          >
            <span
              class="ant-tag __UnclickableTag__"
            >
              3
            </span>
          </div>
        </div>
        <div
          class="ant-row ant-row-space-between mb2"
          type="flex"
        >
          <div
            class="ant-col"
          >
            <label
              class="ant-checkbox-wrapper"
            >
              <span
                class="ant-checkbox"
              >
                <input
                  class="ant-checkbox-input"
                  type="checkbox"
                  value=""
                />
                <span
                  class="ant-checkbox-inner"
                />
              </span>
              <span>
                <span
                  data-test-id="checkbox-aggregation-option-bucket4"
                >
                  bucket4
                </span>
              </span>
            </label>
          </div>
          <div
            class="ant-col"
          >
            <span
              class="ant-tag __UnclickableTag__"
            >
              4
            </span>
          </div>
        </div>
        <div
          class="ant-row ant-row-space-between mb2"
          type="flex"
        >
          <div
            class="ant-col"
          >
            <label
              class="ant-checkbox-wrapper"
            >
              <span
                class="ant-checkbox"
              >
                <input
                  class="ant-checkbox-input"
                  type="checkbox"
                  value=""
                />
                <span
                  class="ant-checkbox-inner"
                />
              </span>
              <span>
                <span
                  data-test-id="checkbox-aggregation-option-bucket5"
                >
                  bucket5
                </span>
              </span>
            </label>
          </div>
          <div
            class="ant-col"
          >
            <span
              class="ant-tag __UnclickableTag__"
            >
              2
            </span>
          </div>
        </div>
        <div
          class="ant-row ant-row-space-between mb2"
          type="flex"
        >
          <div
            class="ant-col"
          >
            <label
              class="ant-checkbox-wrapper"
            >
              <span
                class="ant-checkbox"
              >
                <input
                  class="ant-checkbox-input"
                  type="checkbox"
                  value=""
                />
                <span
                  class="ant-checkbox-inner"
                />
              </span>
              <span>
                <span
                  data-test-id="checkbox-aggregation-option-bucket6"
                >
                  bucket6
                </span>
              </span>
            </label>
          </div>
          <div
            class="ant-col"
          >
            <span
              class="ant-tag __UnclickableTag__"
            >
              2
            </span>
          </div>
        </div>
        <div
          class="ant-row ant-row-space-between mb2"
          type="flex"
        >
          <div
            class="ant-col"
          >
            <label
              class="ant-checkbox-wrapper"
            >
              <span
                class="ant-checkbox"
              >
                <input
                  class="ant-checkbox-input"
                  type="checkbox"
                  value=""
                />
                <span
                  class="ant-checkbox-inner"
                />
              </span>
              <span>
                <span
                  data-test-id="checkbox-aggregation-option-bucket7"
                >
                  bucket7
                </span>
              </span>
            </label>
          </div>
          <div
            class="ant-col"
          >
            <span
              class="ant-tag __UnclickableTag__"
            >
              2
            </span>
          </div>
        </div>
        <div
          class="ant-row ant-row-space-between mb2"
          type="flex"
        >
          <div
            class="ant-col"
          >
            <label
              class="ant-checkbox-wrapper"
            >
              <span
                class="ant-checkbox"
              >
                <input
                  class="ant-checkbox-input"
                  type="checkbox"
                  value=""
                />
                <span
                  class="ant-checkbox-inner"
                />
              </span>
              <span>
                <span
                  data-test-id="checkbox-aggregation-option-bucket8"
                >
                  bucket8
                </span>
              </span>
            </label>
          </div>
          <div
            class="ant-col"
          >
            <span
              class="ant-tag __UnclickableTag__"
            >
              2
            </span>
          </div>
        </div>
        <div
          class="ant-row ant-row-space-between mb2"
          type="flex"
        >
          <div
            class="ant-col"
          >
            <label
              class="ant-checkbox-wrapper"
            >
              <span
                class="ant-checkbox"
              >
                <input
                  class="ant-checkbox-input"
                  type="checkbox"
                  value=""
                />
                <span
                  class="ant-checkbox-inner"
                />
              </span>
              <span>
                <span
                  data-test-id="checkbox-aggregation-option-bucket9"
                >
                  bucket9
                </span>
              </span>
            </label>
          </div>
          <div
            class="ant-col"
          >
            <span
              class="ant-tag __UnclickableTag__"
            >
              2
            </span>
          </div>
        </div>
        <div
          class="ant-row ant-row-space-between mb2"
          type="flex"
        >
          <div
            class="ant-col"
          >
            <label
              class="ant-checkbox-wrapper"
            >
              <span
                class="ant-checkbox"
              >
                <input
                  class="ant-checkbox-input"
                  type="checkbox"
                  value=""
                />
                <span
                  class="ant-checkbox-inner"
                />
              </span>
              <span>
                <span
                  data-test-id="checkbox-aggregation-option-bucket10"
                >
                  bucket10
                </span>
              </span>
            </label>
          </div>
          <div
            class="ant-col"
          >
            <span
              class="ant-tag __UnclickableTag__"
            >
              2
            </span>
          </div>
        </div>
        <button
          class="__SecondaryButton__"
          type="button"
        >
          Show 1 more
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
